--- a/thunderstore/manifest.json
+++ b/thunderstore/manifest.json
@@ -5,5 +5,5 @@
   "dependencies": [
     "xiaoye97-BepInEx-5.4.17"
   ],
-  "website_url": ""
+  "website_url": "https://github.com/LittleSaya/DSPTransportStat"
 }
