添加通过站点列表打开站点面板的功能；
修正不能正常获取游戏设置中的语言的问题；

修正站点类型过滤逻辑中的错误；

调整物品过滤器和搜索框的清空按钮，从文本按钮改为图片按钮；

调整查询参数面板中组件的位置；

调整部分英文翻译；

添加简要说明图片；

调整代码结构，不再在构造界面时写死5个物品槽位；

--- a/DSPTransportStat.csproj
+++ b/DSPTransportStat.csproj
@@ -220,6 +220,10 @@
     </Reference>
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="Doc\" />
+  </ItemGroup>
+
   <Target Name="PostBuild" AfterTargets="PostBuildEvent">
     <Exec Command="copy &quot;$(TargetPath)&quot; &quot;C:\Users\littlesaya\AppData\Roaming\Thunderstore Mod Manager\DataFolder\DysonSphereProgram\profiles\Default\BepInEx\plugins\Unknown-DSPTransportStat&quot; /Y&#xD;&#xA;&#xD;&#xA;copy &quot;$(ProjectDir)README.md&quot; &quot;$(ProjectDir)thunderstore&quot;&#xD;&#xA;&#xD;&#xA;copy &quot;$(TargetPath)&quot; &quot;$(ProjectDir)thunderstore&quot; /Y&#xD;&#xA;&#xD;&#xA;if $(ConfigurationName) == Release (powershell Compress-Archive -Path '$(ProjectDir)thunderstore\$(TargetFileName)','$(ProjectDir)thunderstore\icon.png','$(ProjectDir)thunderstore\manifest.json','$(ProjectDir)thunderstore\README.md' -DestinationPath '$(ProjectDir)thunderstore\publish.zip' -Force)" />
   </Target>
